teams/rancher/dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deployment
  namespace: cattle-system
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
        - name: rancher
          image: rancher/rancher:stable
          ports:
            - containerPort: 80
