teams/rancher/dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
spec:
  selector:
    app: rancher
  ports:
    - port: 80
      targetPort: 80
