teams/rancher/dev/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: rancher-arm.devsecops.wisesight.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port: 
              number: 80
